{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 843,
  "lineage": "23a62e16-662d-28b2-cfc8-d9f2a3495356",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "web_ag",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [
              {
                "max_capacity": 10,
                "min_capacity": 0
              }
            ],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/backendAddressPools/Vnet-08-beap-app1",
                "ip_addresses": [],
                "name": "Vnet-08-beap-app1"
              },
              {
                "fqdns": [],
                "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/backendAddressPools/Vnet-08-beap-app2",
                "ip_addresses": [],
                "name": "Vnet-08-beap-app2"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/backendHttpSettingsCollection/Vnet-08-be-htst-app1",
                "name": "Vnet-08-be-htst-app1",
                "path": "/",
                "pick_host_name_from_backend_address": true,
                "port": 80,
                "probe_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/probes/Vnet-08-be-probe-app1",
                "probe_name": "Vnet-08-be-probe-app1",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              },
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/backendHttpSettingsCollection/Vnet-08-be-htst-app2",
                "name": "Vnet-08-be-htst-app2",
                "path": "/songs/",
                "pick_host_name_from_backend_address": true,
                "port": 80,
                "probe_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/probes/Vnet-08-be-probe-app2",
                "probe_name": "Vnet-08-be-probe-app2",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/frontendIPConfigurations/Vnet-08-feip",
                "name": "Vnet-08-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/publicIPAddresses/PIP-01",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/frontendPorts/Vnet-08-feport",
                "name": "Vnet-08-feport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/virtualNetworks/Vnet-08/subnets/subnet-01"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/frontendIPConfigurations/Vnet-08-feip",
                "frontend_ip_configuration_name": "Vnet-08-feip",
                "frontend_port_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/frontendPorts/Vnet-08-feport",
                "frontend_port_name": "Vnet-08-feport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/httpListeners/Vnet-08-httplstn",
                "name": "Vnet-08-httplstn",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag",
            "identity": [],
            "location": "eastus",
            "name": "web-ag",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "",
                "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/probes/Vnet-08-be-probe-app1",
                "interval": 30,
                "match": [
                  {
                    "body": "App1",
                    "status_code": [
                      "200"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "Vnet-08-be-probe-app1",
                "path": "/",
                "pick_host_name_from_backend_http_settings": true,
                "port": 80,
                "protocol": "Http",
                "timeout": 30,
                "unhealthy_threshold": 3
              },
              {
                "host": "",
                "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/probes/Vnet-08-be-probe-app2",
                "interval": 30,
                "match": [
                  {
                    "body": "App2",
                    "status_code": [
                      "200"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "Vnet-08-be-probe-app2",
                "path": "/songs/",
                "pick_host_name_from_backend_http_settings": true,
                "port": 80,
                "protocol": "Http",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/httpListeners/Vnet-08-httplstn",
                "http_listener_name": "Vnet-08-httplstn",
                "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/requestRoutingRules/Vnet-08-rqrt-1",
                "name": "Vnet-08-rqrt-1",
                "priority": 9,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "PathBasedRouting",
                "url_path_map_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/urlPathMaps/Vnet-08-upm-app1-app2",
                "url_path_map_name": "Vnet-08-upm-app1-app2"
              }
            ],
            "resource_group_name": "RG-35",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 0,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [
              {
                "default_backend_address_pool_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/backendAddressPools/Vnet-08-beap-app1",
                "default_backend_address_pool_name": "Vnet-08-beap-app1",
                "default_backend_http_settings_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/backendHttpSettingsCollection/Vnet-08-be-htst-app1",
                "default_backend_http_settings_name": "Vnet-08-be-htst-app1",
                "default_redirect_configuration_id": "",
                "default_redirect_configuration_name": "",
                "default_rewrite_rule_set_id": "",
                "default_rewrite_rule_set_name": "",
                "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/urlPathMaps/Vnet-08-upm-app1-app2",
                "name": "Vnet-08-upm-app1-app2",
                "path_rule": [
                  {
                    "backend_address_pool_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/backendAddressPools/Vnet-08-beap-app2",
                    "backend_address_pool_name": "Vnet-08-beap-app2",
                    "backend_http_settings_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/backendHttpSettingsCollection/Vnet-08-be-htst-app2",
                    "backend_http_settings_name": "Vnet-08-be-htst-app2",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/urlPathMaps/Vnet-08-upm-app1-app2/pathRules/app2-rule",
                    "name": "app2-rule",
                    "paths": [
                      "/songs/"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  }
                ]
              }
            ],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.PIP-01",
            "azurerm_resource_group.RG",
            "azurerm_subnet.Snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/networkInterfaces/nic-1",
            "internal_domain_name_suffix": "0b4rzaotzlhu1kdwitodcwweph.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.2.46.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/publicIPAddresses/public-ip",
                "subnet_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/virtualNetworks/Vnet-08/subnets/subnet-02"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-1E-DD-78",
            "name": "nic-1",
            "private_ip_address": "10.2.46.4",
            "private_ip_addresses": [
              "10.2.46.4"
            ],
            "resource_group_name": "RG-35",
            "virtual_machine_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Compute/virtualMachines/vm-1"
          },
          "dependencies": [
            "azurerm_public_ip.PIP",
            "azurerm_resource_group.RG",
            "azurerm_subnet.Snet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/networkInterfaces/nic-2",
            "internal_domain_name_suffix": "0b4rzaotzlhu1kdwitodcwweph.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.2.48.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/publicIPAddresses/publicip-02",
                "subnet_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/virtualNetworks/Vnet-08/subnets/subnet-03"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-9C-46-5D",
            "name": "nic-2",
            "private_ip_address": "10.2.48.4",
            "private_ip_addresses": [
              "10.2.48.4"
            ],
            "resource_group_name": "RG-35",
            "virtual_machine_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Compute/virtualMachines/vm-2"
          },
          "dependencies": [
            "azurerm_public_ip.PIP",
            "azurerm_resource_group.RG",
            "azurerm_subnet.Snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/backendAddressPools/Vnet-08-beap-app1",
            "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/networkInterfaces/nic-1/ipConfigurations/ipconfig|/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/backendAddressPools/Vnet-08-beap-app1",
            "ip_configuration_name": "ipconfig",
            "network_interface_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/networkInterfaces/nic-1"
          },
          "dependencies": [
            "azurerm_application_gateway.web_ag",
            "azurerm_network_interface.Nic",
            "azurerm_public_ip.PIP",
            "azurerm_public_ip.PIP-01",
            "azurerm_resource_group.RG",
            "azurerm_subnet.Snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "example-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/backendAddressPools/Vnet-08-beap-app2",
            "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/networkInterfaces/nic-2/ipConfigurations/ipconfig|/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/applicationGateways/web-ag/backendAddressPools/Vnet-08-beap-app2",
            "ip_configuration_name": "ipconfig",
            "network_interface_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/networkInterfaces/nic-2"
          },
          "dependencies": [
            "azurerm_application_gateway.web_ag",
            "azurerm_network_interface.Nic",
            "azurerm_public_ip.PIP",
            "azurerm_public_ip.PIP-01",
            "azurerm_resource_group.RG",
            "azurerm_subnet.Snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/networkSecurityGroups/NSG-08",
            "location": "eastus",
            "name": "NSG-08",
            "resource_group_name": "RG-35",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "NSG-123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/publicIPAddresses/public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.236.142.37",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "public-ip",
            "resource_group_name": "RG-35",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_subnet.Snet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/publicIPAddresses/publicip-02",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.236.141.32",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "publicip-02",
            "resource_group_name": "RG-35",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_subnet.Snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PIP-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/publicIPAddresses/PIP-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.236.139.231",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "PIP-01",
            "resource_group_name": "RG-35",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.45.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/virtualNetworks/Vnet-08/subnets/subnet-01",
            "name": "subnet-01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-35",
            "virtual_network_name": "Vnet-08"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.46.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/virtualNetworks/Vnet-08/subnets/subnet-02",
            "name": "subnet-02",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-35",
            "virtual_network_name": "Vnet-08"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.48.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/virtualNetworks/Vnet-08/subnets/subnet-03",
            "name": "subnet-03",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-35",
            "virtual_network_name": "Vnet-08"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/virtualNetworks/Vnet-08/subnets/subnet-01",
            "network_security_group_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/networkSecurityGroups/NSG-08",
            "subnet_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/virtualNetworks/Vnet-08/subnets/subnet-01"
          },
          "dependencies": [
            "azurerm_network_security_group.NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.Snet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/virtualNetworks/Vnet-08/subnets/subnet-02",
            "network_security_group_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/networkSecurityGroups/NSG-08",
            "subnet_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/virtualNetworks/Vnet-08/subnets/subnet-02"
          },
          "dependencies": [
            "azurerm_network_security_group.NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.Snet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/virtualNetworks/Vnet-08/subnets/subnet-03",
            "network_security_group_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/networkSecurityGroups/NSG-08",
            "subnet_id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/virtualNetworks/Vnet-08/subnets/subnet-03"
          },
          "dependencies": [
            "azurerm_network_security_group.NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.Snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "811c7dd0-cad3-4dcf-a876-44dc315ac47f",
            "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/virtualNetworks/Vnet-08",
            "location": "eastus",
            "name": "Vnet-08",
            "resource_group_name": "RG-35",
            "subnet": [
              {
                "address_prefix": "10.2.45.0/24",
                "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/virtualNetworks/Vnet-08/subnets/subnet-01",
                "name": "subnet-01",
                "security_group": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/networkSecurityGroups/NSG-08"
              },
              {
                "address_prefix": "10.2.46.0/24",
                "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/virtualNetworks/Vnet-08/subnets/subnet-02",
                "name": "subnet-02",
                "security_group": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/networkSecurityGroups/NSG-08"
              },
              {
                "address_prefix": "10.2.48.0/24",
                "id": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/virtualNetworks/Vnet-08/subnets/subnet-03",
                "name": "subnet-03",
                "security_group": "/subscriptions/0eda5b5d-565f-444b-8f43-5c989520b42e/resourceGroups/RG-35/providers/Microsoft.Network/networkSecurityGroups/NSG-08"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    }
  ]
}